// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Computing Geometry correctly calculates bottom geometry 1`] = `
Object {
  "adjustedContentSize": Size {
    "height": 100,
    "width": 200,
  },
  "anchorPoint": Point {
    "x": 56,
    "y": 418,
  },
  "placement": "bottom",
  "tooltipOrigin": Point {
    "x": 24,
    "y": 426,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates bottom geometry 2`] = `
Object {
  "adjustedContentSize": Size {
    "height": 200,
    "width": 150,
  },
  "anchorPoint": Point {
    "x": 272,
    "y": 418,
  },
  "placement": "bottom",
  "tooltipOrigin": Point {
    "x": 201,
    "y": 436,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates bottom geometry 3`] = `
Object {
  "adjustedContentSize": Size {
    "height": 396,
    "width": 300,
  },
  "anchorPoint": Point {
    "x": 99,
    "y": 239,
  },
  "placement": "bottom",
  "tooltipOrigin": Point {
    "x": 24,
    "y": 247,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates left geometry 1`] = `
Object {
  "adjustedContentSize": Size {
    "height": 100,
    "width": -8,
  },
  "anchorPoint": Point {
    "x": 20,
    "y": 382,
  },
  "placement": "left",
  "tooltipOrigin": Point {
    "x": 20,
    "y": 332,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates left geometry 2`] = `
Object {
  "adjustedContentSize": Size {
    "height": 200,
    "width": 150,
  },
  "anchorPoint": Point {
    "x": 236,
    "y": 382,
  },
  "placement": "left",
  "tooltipOrigin": Point {
    "x": 68,
    "y": 282,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates left geometry 3`] = `
Object {
  "adjustedContentSize": Size {
    "height": 500,
    "width": -8,
  },
  "anchorPoint": Point {
    "x": 20,
    "y": 135,
  },
  "placement": "left",
  "tooltipOrigin": Point {
    "x": 20,
    "y": 24,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates right geometry 1`] = `
Object {
  "adjustedContentSize": Size {
    "height": 100,
    "width": 200,
  },
  "anchorPoint": Point {
    "x": 92,
    "y": 382,
  },
  "placement": "right",
  "tooltipOrigin": Point {
    "x": 100,
    "y": 332,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates right geometry 2`] = `
Object {
  "adjustedContentSize": Size {
    "height": 200,
    "width": 25,
  },
  "anchorPoint": Point {
    "x": 308,
    "y": 382,
  },
  "placement": "right",
  "tooltipOrigin": Point {
    "x": 326,
    "y": 282,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates right geometry 3`] = `
Object {
  "adjustedContentSize": Size {
    "height": 500,
    "width": 165,
  },
  "anchorPoint": Point {
    "x": 178,
    "y": 135,
  },
  "placement": "right",
  "tooltipOrigin": Point {
    "x": 186,
    "y": 24,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates top geometry 1`] = `
Object {
  "adjustedContentSize": Size {
    "height": 100,
    "width": 200,
  },
  "anchorPoint": Point {
    "x": 56,
    "y": 346,
  },
  "placement": "top",
  "tooltipOrigin": Point {
    "x": 24,
    "y": 238,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates top geometry 2`] = `
Object {
  "adjustedContentSize": Size {
    "height": 200,
    "width": 150,
  },
  "anchorPoint": Point {
    "x": 272,
    "y": 346,
  },
  "placement": "top",
  "tooltipOrigin": Point {
    "x": 201,
    "y": 128,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates top geometry 3`] = `
Object {
  "adjustedContentSize": Size {
    "height": 3,
    "width": 300,
  },
  "anchorPoint": Point {
    "x": 99,
    "y": 31,
  },
  "placement": "top",
  "tooltipOrigin": Point {
    "x": 24,
    "y": 20,
  },
}
`;
